--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.35.0"
+    "react-hook-form": "^7.35.0",
+    "react-slider": "^2.0.4"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@types/react-slider": "^1.3.1",
     "autoprefixer": "^10.4.10",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
